--- a/src/_quarto.yml
+++ b/src/_quarto.yml
@@ -21,6 +21,7 @@ book:
     - href: dashboard.qmd
     - href: data.qmd
       text: "Cleaning & visualization"
+    - href: vss-2025-submitted.qmd
     - part: "Addenda"
       chapters:
         - href: data-management-plan.qmd
